Fix navlink not centered

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -67,8 +67,8 @@
 }
 
 .nav-link {
-  padding: 10px 0 0 0;
-  margin: 10px 0;
+  padding: 0 0;
+  margin: 0 0;
 }
 
 /* article styling */
